fix: prevent text resizing on mobile devices

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -18,6 +18,8 @@ app-root,
 
 html {
   overflow: hidden !important;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 
   button,
   a {
